# nes-py

./: backup_restore.py  pyproject.toml  requirements.txt  setup.py  speedtest.py
nes_py/: nes_env.py
nes_py/app/: cli.py  play_human.py  play_random.py
nes_py/tests/: test_multiple_makes.py
nes_py/wrappers/: joypad_space.py
scripts/: run.py
